<resources>
    <string name="app_name">Shopping Market</string>
    <string name="text_search">Search</string>
    <string name="text_user">User or Email</string>
    <string name="text_password">Enter you password</string>
    <string name="conf_pass">Confirm your pass</string>
    <string name="forget_string">Forget Password</string>
    <string name="text_mobile">Mobile Num</string>
    <string name="log_btn">Login</string>
    <string name="Sign_btn">Signup</string>
    <string name="all_category">All</string>
    <string name="computing_category">Computing</string>
    <string name="home_appliances_category">Home Appliances</string>
    <string name="technology_category">Technology</string>
    <string name="tools_category">Tools</string>
    <string name="noLogin">For a better experience remember to log in</string>
    <string name="action_search">Search</string>
    <string name="action_log">LogIn</string>
    <string name="action_log_out">LogOut</string>
    <string name="menu_recycle">Item title</string>
    <string name="menu_details">Details</string>
    <string name="menu_price">Price</string>
    <string name="menu_title">Title</string>
    <string name="category_title">Category Title</string>
    <string name="category_details">Category details</string>
    <string name="menu_ratings">ratings</string>
    <string name="recommendItems">Recommended articles</string>
    <string name="categoryItems">List by categories</string>
    <string name="id">Id</string>
    <string name="itemTitle">Title</string>
    <string name="add_car_btn">Add to Cart</string>
    <string name="proImage">Product Images</string>
    <string name="prefKey">com.myapplication.shopingmarket.PREFERENCE_FILE_KEY</string>
    <string name="tempKey" translatable="false">com.myapplication.shopingmarket.TEMP_FILE_KEY</string>
    <string name="Purchase_details">Purchase details</string>
    <string name="quantity">Quantity</string>
    <string name="total_price">Total price</string>
    <string name="currency">US</string>
    <string name="normal_price">Normal price</string>
    <string name="item_details">Product description</string>
    <string name="condition">Condition</string>
    <string name="material">Material</string>
    <string name="warranty">Warranty</string>
    <string name="user_question">User question</string>
    <string name="reply">Seller reply</string>
    <string name="question_title">Questions about the product</string>
    <string name="product_ratings">Product ratings</string>
    <string name="item_unavaliable">Currently not available</string>
    <string name="logout_text">Sign off</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="empty_car">Is currently empty</string>
    <string name="purchase">Purchase</string>
    <string name="shop_title">Shopping cart</string>
    <string name="text_Rpassword">Confirm your pass</string>
    <string name="car_details">Details</string>
    <string name="added">Added product</string>
    <string name="modify">MODIFY THE CART</string>
    <string name="shop_total">Total</string>
    <string name="comfirm">Confirm your order</string>
    <string name="comfirm_text">You confirm purchase of </string>
    <string name="comfirm_text2">for the value of</string>
    <string name="complete_text">Purchase completed</string>

</resources>