<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_40"
        android:title="@string/action_search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/car_button"
        android:icon="@drawable/ic_shopping_cart_40"
        android:title="@string/shopping_cart"
        app:showAsAction="always"
        android:enabled="false"
        android:visible="false"/>

    <item android:id="@+id/login_btn_bar"
        android:icon="@drawable/ic_login_40"
        android:title="@string/action_log"
        app:showAsAction="always"
        android:enabled="false"
        android:visible="false"/>
    <item
        android:id="@+id/logout_btn_bar"
        android:icon="@drawable/ic_logout_40"
        android:title="@string/logout_text"
        app:showAsAction="collapseActionView"
        android:enabled="false"
        android:visible="false"/>


</menu>