<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                android:paddingBottom="7dp"
                android:paddingTop="7dp">
                <TextView
                    android:id="@+id/item_activity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itemTitle"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:elevation="16dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="80dp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:progressTint="@color/color_bg"
                        android:scaleX="1.8"
                        android:scaleY="1.8"
                        android:secondaryProgressTint="@color/bt_color_1"
                        android:stepSize="0.1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="11dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/shortDec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginStart="11dp"
                    android:textSize="18sp"/>

                <androidx.viewpager2.widget.ViewPager2
                    android:paddingTop="9dp"
                    android:id="@+id/item_slider"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"/>
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/dotsImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabMode="fixed"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabBackground="@drawable/tab_selector"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dots_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="11dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Purchase_details"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="22dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="7dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/price_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/total_price"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toStartOf="@+id/total_price"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:layout_marginEnd="4dp"
                        android:textColor="@color/black"
                        android:textSize="25dp"
                        app:layout_constraintEnd_toStartOf="@+id/currency"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:text="@string/currency"
                        android:textColor="@color/black"
                        android:textSize="25dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/quantity"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        app:layout_constraintBottom_toBottomOf="@+id/amount_spinner"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <Spinner
                        android:id="@+id/amount_spinner"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="13dp"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toEndOf="@+id/quantity"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <Button
                        android:id="@+id/login_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/button_disable"
                        android:text="@string/add_car_btn"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/price_total" />

                    <TextView
                        android:id="@+id/normal_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toTopOf="@+id/total_price"
                        app:layout_constraintEnd_toEndOf="@+id/total_price" />

                    <TextView
                        android:id="@+id/currency_n"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currency"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="25dp"
                        app:layout_constraintBottom_toTopOf="@+id/currency"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/normal_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="9dp"
                        android:text="@string/normal_price"
                        android:textColor="@color/holo_red_dark"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/price_total"
                        app:layout_constraintEnd_toEndOf="@+id/price_total" />

                    <TextView
                        android:id="@+id/item_disable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_unavaliable"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20dp"
                        app:layout_constraintBottom_toTopOf="@+id/login_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/description_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/question_title"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingStart="11dp"
                    android:paddingBottom="7dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/item_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    android:scrollbarAlwaysDrawVerticalTrack="false"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/product_ratings"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingStart="11dp"
                    android:paddingBottom="7dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ratings_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    android:scrollbarAlwaysDrawVerticalTrack="false"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>